# phone-mnemonic

./: Cargo.toml  jmp.sh  readme.md
.ci/: build.sh
jmp/: jmp.sh
